Upgrage SEO point

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,16 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Personal Page</title>
-    <meta name="description" content="Hung Tran Personal/Portfolio Template">
-    <meta name="keywords" content="personal template, portfolio template, creative, bootstrap, html5/css5">
+    <title>Tran Viet Hung | hungnhot |RoR Developer</title>
+    <meta name="description" content="Tran Viet Hung's Personal/Portfolio Page, hungnhot's page, hungnhot, tran viet hung">
+    <meta name="keywords" content="hungnhot, tranviethung, tran viet hung, hung tran, Tran Viet Hung, hungnhot's page">
     <meta name="author" content="hungnhot">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- Favicons
     ================================================== -->
-    <!-- <link rel="shortcut icon" href="favicon.ico"> -->
+    <link rel="icon" type="image/x-icon" href="<%= asset_path( "favicon.ico" ) %>" />
 
     <!-- Google-Fonts
     ================================================== -->
