--- a/app/views/personal/index.html.erb
+++ b/app/views/personal/index.html.erb
@@ -16,7 +16,7 @@
       <div class="header-logo">
         <!-- Logo -->
         <a class="logo" href="#">
-          <img src='<%= asset_path( "logo.jpg" ) %>'>
+          <img src='<%= asset_path( "logo.jpg" ) %>' alt='logo'>
         </a>
       </div>
       <a class="elemadded responsive-link" href="#">Menu</a>
@@ -71,7 +71,7 @@
         ====================-->
       <section class="about section section-t wow fadeInRight animated" id="about">
         <!-- <p class="sub-title">Who am i ?</p> -->
-        <h3 class="title">Personal Details</h3>   
+        <h2 class="title">Personal Details</h2>   
         <hr/>
         <p align="justify">Hi, I’m a Software Developer with 2<sup>+</sup> years in developing and maintaining Web application using Ruby on Rails and related technologies. I also join in some project using PHP. I would like to use my knowledge gained in the website development cycle and improve myself to becoming full-stack developer
         </p>
