Update SEO point (cont.)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Tran Viet Hung | hungnhot |RoR Developer</title>
+    <title>Tran Viet Hung | hungnhot | Website Developer</title>
     <meta name="description" content="Tran Viet Hung's Personal/Portfolio Page, hungnhot's page, hungnhot, tran viet hung">
-    <meta name="keywords" content="hungnhot, tranviethung, tran viet hung, hung tran, Tran Viet Hung, hungnhot's page">
+    <meta name="keywords" content="hungnhot, Tran Viet Hung's Personal/Portfolio Page, hungnhot's page, hungnhot, tran viet hung, Tran Viet Hung | hungnhot | RoR Developer">
     <meta name="author" content="hungnhot">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -18,8 +18,6 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,500,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
-
-    
 
     <%= csrf_meta_tags %>
 
