--- a/app/views/personal/index.html.erb
+++ b/app/views/personal/index.html.erb
@@ -75,13 +75,13 @@
         <hr/>
         <p align="justify">Hi, I’m a Software Developer with 2<sup>+</sup> years in developing and maintaining Web application using Ruby on Rails and related technologies. I also join in some project using PHP. I would like to use my knowledge gained in the website development cycle and improve myself to becoming full-stack developer
         </p>
-        <ul class="list-inline">
-          <li><span>Name:</span> <%= @personal_details['name'] %></li>
-          <li><span>Email:</span> <a href="mailto:<%= @personal_details['email'] %>"><%= @personal_details['email'] %></a></li>
-          <li><span>Phone:</span> <%= @personal_details['phone'] %></li>
-          <li><span>Date of birth:</span> <%= @personal_details['birthday'] %></li>
-          <li><span>Address:</span> <%= @personal_details['address'] %></li>
-          <li><span>Hobbies:</span> <%= @personal_details['hobbies'] %></li>
+        <ul class="list-inline" itemscope>
+          <li itemprop="name"><span>Name:</span> <%= @personal_details['name'] %></li>
+          <li itemprop="email"><span>Email:</span> <a href="mailto:<%= @personal_details['email'] %>"><%= @personal_details['email'] %></a></li>
+          <li itemprop="phone"><span>Phone:</span> <%= @personal_details['phone'] %></li>
+          <li itemprop="birtday"><span>Date of birth:</span> <%= @personal_details['birthday'] %></li>
+          <li itemprop="address"><span>Address:</span> <%= @personal_details['address'] %></li>
+          <li itemprop="hobbies"><span>Hobbies:</span> <%= @personal_details['hobbies'] %></li>
         </ul>
         <div class="clear"></div>
         <div class="text-center margin-t-40">
