Add more meta keyword

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Tran Viet Hung | hungnhot | Website Developer</title>
     <meta name="description" content="Tran Viet Hung's Personal/Portfolio Page, hungnhot's page, hungnhot, tran viet hung">
-    <meta name="keywords" content="hungnhot, Tran Viet Hung's Personal/Portfolio Page, hungnhot's page, hungnhot, tran viet hung, Tran Viet Hung | hungnhot | RoR Developer">
+    <meta name="keywords" content="hungnhot, Tran Viet Hung's Personal/Portfolio Page, hungnhot's page, hungnhot, tran viet hung, Tran Viet Hung | hungnhot | RoR Developer, hung rails, hung ruby, viet hung ruby, viet hung rails">
     <meta name="author" content="hungnhot">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
