[Dev] Add years and update CV

--- a/app/views/personal/index.html.erb
+++ b/app/views/personal/index.html.erb
@@ -73,7 +73,7 @@
         <!-- <p class="sub-title">Who am i ?</p> -->
         <h2 class="title">Personal Details</h2>   
         <hr/>
-        <p align="justify">Hi, I’m a Software Developer with 3<sup>+</sup> years in developing and maintaining Web application using Ruby on Rails and related technologies. I also join in some project using PHP. I would like to use my knowledge gained in the website development cycle and improve myself to becoming full-stack developer
+        <p align="justify">Hi, I’m a Software Developer with <%= @years %><sup>+</sup> years in developing and maintaining Web application using Ruby on Rails and related technologies. I also join in some project using PHP. I would like to use my knowledge gained in the website development cycle and improve myself to becoming full-stack developer
         </p>
         <ul class="list-inline" itemscope>
           <li itemprop="name"><span>Name:</span> <%= @personal_details['name'] %></li>
